--- a/User/package.json
+++ b/User/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "bcrypt": "^6.0.0",
+    "bcrypt-cli": "^1.1.0",
+    "password": "^0.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
